--- a/backend/package.json
+++ b/backend/package.json
@@ -16,11 +16,12 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^3.0.2",
-    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
-    "express": "^5.1.0",
+    "fastify": "^4.28.1",
+    "@fastify/cors": "^9.0.1",
+    "@fastify/multipart": "^8.3.0",
+    "@fastify/static": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
-    "multer": "^2.0.2",
     "pg": "^8.16.3"
   }
 }
