--- a/key-bar-qr-menu/package.json
+++ b/key-bar-qr-menu/package.json
@@ -13,6 +13,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.454.0",
+    "qrcode": "^1.5.4",
     "react": "^19",
     "react-dom": "^19",
     "react-router-dom": "^6.28.0",
