--- a/backend/package.json
+++ b/backend/package.json
@@ -13,13 +13,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcryptjs": "^3.0.2",
-    "dotenv": "^17.2.3",
-    "fastify": "^4.28.1",
     "@fastify/cors": "^9.0.1",
     "@fastify/multipart": "^8.3.0",
     "@fastify/static": "^7.0.1",
+    "bcryptjs": "^3.0.2",
+    "dotenv": "^17.2.3",
+    "fastify": "^4.28.1",
     "jsonwebtoken": "^9.0.2",
-    "pg": "^8.16.3"
+    "node-cron": "^4.2.1",
+    "pg": "^8.16.3",
+    "sharp": "^0.34.5"
   }
 }
