--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "@fastify/cors": "^9.0.1",
     "@fastify/multipart": "^8.3.0",
     "@fastify/static": "^7.0.1",
+    "@fastify/rate-limit": "^10.1.1",
     "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.3",
     "fastify": "^4.28.1",
