--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,7 +3,11 @@ FROM node:20-bookworm-slim AS base
 WORKDIR /usr/src/app
 
 # Install system dependencies required for native modules such as sharp
-RUN apt-get update \
+RUN rm -f /etc/apt/sources.list.d/* \
+  && echo "deb http://mirror.yandex.ru/debian bookworm main contrib non-free non-free-firmware" > /etc/apt/sources.list \
+  && echo "deb http://mirror.yandex.ru/debian bookworm-updates main contrib non-free non-free-firmware" >> /etc/apt/sources.list \
+  && echo "deb http://mirror.yandex.ru/debian-security bookworm-security main contrib non-free non-free-firmware" >> /etc/apt/sources.list \
+  && apt-get update \
   && apt-get install -y --no-install-recommends \
     build-essential \
     python3 \
@@ -12,15 +16,18 @@ RUN apt-get update \
 
 ENV NODE_ENV=production
 
-COPY package*.json ./
+COPY backend/package.json ./
+COPY backend/package-lock.json ./
 
 RUN npm ci --omit=dev
 
-COPY . .
+COPY backend/. .
 
 ENV PORT=3000
 
 EXPOSE 3000
 
-CMD ["node", "server.js"]
+RUN chmod +x ./entrypoint.sh
+
+ENTRYPOINT ["./entrypoint.sh"]
 
