--- a/deploy.env.example
+++ b/deploy.env.example
@@ -6,4 +6,8 @@ LETSENCRYPT_EMAIL=admin@example.com
 SSL_CERT_PATH=/etc/ssl/private/server.crt
 SSL_KEY_PATH=/etc/ssl/private/server.key
 PUBLIC_API_URL=https://menu.example.com/api
+YOOKASSA_SHOP_ID=
+YOOKASSA_SECRET_KEY=
+YOOKASSA_RETURN_URL=https://menu.example.com/payment/result
+APP_BASE_URL=https://menu.example.com
 
