--- a/backend/env.example
+++ b/backend/env.example
@@ -8,3 +8,8 @@ JWT_SECRET=change-me-in-production
 ADMIN_USERNAME=admin
 ADMIN_PASSWORD=AdminStrongPassword123
 
+YOOKASSA_SHOP_ID=
+YOOKASSA_SECRET_KEY=
+YOOKASSA_RETURN_URL=https://localhost:5173/payment/result
+APP_BASE_URL=https://localhost:5173
+
