--- a/backend/package.json
+++ b/backend/package.json
@@ -16,14 +16,15 @@
   "dependencies": {
     "@fastify/cors": "^9.0.1",
     "@fastify/multipart": "^8.3.0",
-    "@fastify/static": "^7.0.1",
     "@fastify/rate-limit": "^10.1.1",
+    "@fastify/static": "^7.0.1",
     "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.3",
     "fastify": "^4.28.1",
     "jsonwebtoken": "^9.0.2",
     "node-cron": "^4.2.1",
     "pg": "^8.16.3",
-    "sharp": "^0.34.5"
+    "sharp": "^0.34.5",
+    "yookassa": "^0.1.1"
   }
 }
