fixed reservetipn time

--- a/backend/env.example
+++ b/backend/env.example
@@ -13,3 +13,5 @@ YOOKASSA_SECRET_KEY=
 YOOKASSA_RETURN_URL=https://localhost:5173/payment/result
 APP_BASE_URL=https://localhost:5173
 
+RESTAURANT_TZ_OFFSET=+03:00
+
